--- a/gtk-3.20/gtk.css
+++ b/gtk-3.20/gtk.css
@@ -848,9 +848,8 @@ combobox arrow {
     min-width: 16px; }
 
 toolbar, .inline-toolbar {
-    -GtkWidget-window-dragging: true;
-    padding: 4px;
-    background-color: #383C4A; }
+
+}
 toolbar separator, .inline-toolbar separator {
     background: none; }
 toolbar.horizontal separator, .horizontal.inline-toolbar separator {
@@ -885,6 +884,10 @@ toolbar:not(.inline-toolbar) .linked > button, .inline-toolbar:not(.inline-toolb
 toolbar:not(.inline-toolbar) .linked > entry, .inline-toolbar:not(.inline-toolbar) .linked > entry {
     margin-right: 0; }
 
+toolbar .button {
+    padding: 2px 5px;
+	background-color: transparent;
+}
 .primary-toolbar {
     background-image: url("darkelements/toolbar.png");
     padding:3px;
@@ -896,12 +899,24 @@ toolbar:not(.inline-toolbar) .linked > entry, .inline-toolbar:not(.inline-toolba
 }
 
 .inline-toolbar {
-    background-color: #313541;
+    border-width: 0;
+    border-image: none;
+    border-color:@theme_bg_color;
+	background-image: url("darkelements/toolbar.png");
+	background-size: 100% 100%
+}
+
+/* primary toolbar buttons */
+.primary-toolbar .button,
+.primary-toolbar.button {
+    background-color: transparent;
     border-style: solid;
-    border-color: #2b2e39;
-    border-width: 0 1px 1px;
-    padding: 3px;
-    border-radius: 0  0 3px 3px; }
+	border-color: transparent;
+    border-image:none;
+	background-image:none;
+
+    border-width: 2px;
+}
 
 searchbar {
     background-color: #383C4A;
@@ -1105,11 +1120,14 @@ window.csd > .titlebar:not(headerbar):backdrop {
     color: #FC4138; }
 
 .primary-toolbar button, headerbar button {
-    color: rgba(207, 218, 231, 0.8);
-    outline-color: rgba(207, 218, 231, 0.1);
-    outline-offset: -3px;
-    background-color: rgba(47, 52, 63, 0);
-    border-color: rgba(47, 52, 63, 0); }
+	background-color: transparent;
+    border-style: solid;
+	border-color: transparent;
+    border-image:none;
+	background-image:none;
+
+    border-width: 2px;
+}
 .primary-toolbar button:backdrop, headerbar button:backdrop {
     opacity: 0.7; }
 .primary-toolbar button:hover, headerbar button:hover {
@@ -1222,128 +1240,117 @@ border: solid;
     border-left-color: rgba(21, 23, 28, 0.37); }
 
 .primary-toolbar button.suggested-action, headerbar button.suggested-action {
-    background-clip: border-box;
-    color: #ffffff;
-    outline-color: rgba(255, 255, 255, 0.3);
-    background-color: #be3941;
-    border-color: #be3941; }
+
+}
 .primary-toolbar button.suggested-action.flat, headerbar button.suggested-action.flat, .primary-toolbar button.suggested-action.sidebar-button, headerbar button.suggested-action.sidebar-button {
-    border-color: transparent;
-    background-color: transparent;
-    background-image: none;
-    color: #be3941;
-    outline-color: rgba(190, 57, 65, 0.3); }
+
+}
 .primary-toolbar button.suggested-action:hover, headerbar button.suggested-action:hover {
-    background-clip: border-box;
-    color: #ffffff;
-    outline-color: rgba(255, 255, 255, 0.3);
-    background-color: #ce5c63;
-    border-color: #ce5c63; }
+
+}
 .primary-toolbar button.suggested-action:active, headerbar button.suggested-action:active, .primary-toolbar button.suggested-action:checked, headerbar button.suggested-action:checked {
-    background-clip: border-box;
-    color: #ffffff;
-    outline-color: rgba(255, 255, 255, 0.3);
-    background-color: #972d34;
-    border-color: #972d34; }
+
+}
 .primary-toolbar button.suggested-action.flat:disabled, headerbar button.suggested-action.flat:disabled, .primary-toolbar button.suggested-action.sidebar-button:disabled, headerbar button.suggested-action.sidebar-button:disabled, .primary-toolbar button.suggested-action:disabled, headerbar button.suggested-action:disabled {
-    background-color: rgba(47, 52, 63, 0);
-    border-color: rgba(47, 52, 63, 0); }
+
+}
 .primary-toolbar button.suggested-action.flat:disabled label, headerbar button.suggested-action.flat:disabled label, .primary-toolbar button.suggested-action.sidebar-button:disabled label, headerbar button.suggested-action.sidebar-button:disabled label, .primary-toolbar button.suggested-action.flat:disabled, headerbar button.suggested-action.flat:disabled, .primary-toolbar button.suggested-action.sidebar-button:disabled, headerbar button.suggested-action.sidebar-button:disabled, .primary-toolbar button.suggested-action:disabled label, headerbar button.suggested-action:disabled label, .primary-toolbar button.suggested-action:disabled, headerbar button.suggested-action:disabled {
-    color: rgba(207, 218, 231, 0.35); }
+
+}
 
 .primary-toolbar button.suggested-action:backdrop, headerbar button.suggested-action:backdrop, .primary-toolbar button.suggested-action:backdrop, headerbar button.suggested-action:backdrop {
-    opacity: 0.8; }
+
+}
 
 .primary-toolbar button.destructive-action, headerbar button.destructive-action {
-    background-clip: border-box;
-    color: #ffffff;
-    outline-color: rgba(255, 255, 255, 0.3);
-    background-color: #F04A50;
-    border-color: #F04A50; }
+
+}
 .primary-toolbar button.destructive-action.flat, headerbar button.destructive-action.flat, .primary-toolbar button.destructive-action.sidebar-button, headerbar button.destructive-action.sidebar-button {
-    border-color: transparent;
-    background-color: transparent;
-    background-image: none;
-    color: #F04A50;
-    outline-color: rgba(240, 74, 80, 0.3); }
+
+}
 .primary-toolbar button.destructive-action:hover, headerbar button.destructive-action:hover {
-    background-clip: border-box;
-    color: #ffffff;
-    outline-color: rgba(255, 255, 255, 0.3);
-    background-color: #f4797e;
-    border-color: #f4797e; }
+
+}
 .primary-toolbar button.destructive-action:active, headerbar button.destructive-action:active, .primary-toolbar button.destructive-action:checked, headerbar button.destructive-action:checked {
-    background-clip: border-box;
-    color: #ffffff;
-    outline-color: rgba(255, 255, 255, 0.3);
-    background-color: #ec1b22;
-    border-color: #ec1b22; }
+
+}
 .primary-toolbar button.destructive-action.flat:disabled, headerbar button.destructive-action.flat:disabled, .primary-toolbar button.destructive-action.sidebar-button:disabled, headerbar button.destructive-action.sidebar-button:disabled, .primary-toolbar button.destructive-action:disabled, headerbar button.destructive-action:disabled {
-    background-color: rgba(47, 52, 63, 0);
-    border-color: rgba(47, 52, 63, 0); }
+
+}
 .primary-toolbar button.destructive-action.flat:disabled label, headerbar button.destructive-action.flat:disabled label, .primary-toolbar button.destructive-action.sidebar-button:disabled label, headerbar button.destructive-action.sidebar-button:disabled label, .primary-toolbar button.destructive-action.flat:disabled, headerbar button.destructive-action.flat:disabled, .primary-toolbar button.destructive-action.sidebar-button:disabled, headerbar button.destructive-action.sidebar-button:disabled, .primary-toolbar button.destructive-action:disabled label, headerbar button.destructive-action:disabled label, .primary-toolbar button.destructive-action:disabled, headerbar button.destructive-action:disabled {
-    color: rgba(207, 218, 231, 0.35); }
+
+}
 
 .primary-toolbar button.destructive-action:backdrop, headerbar button.destructive-action:backdrop, .primary-toolbar button.destructive-action:backdrop, headerbar button.destructive-action:backdrop {
-    opacity: 0.8; }
+
+}
 
 .primary-toolbar spinbutton:not(.vertical):focus, headerbar spinbutton:not(.vertical):focus {
-    color: #ffffff;
-    caret-color: #ffffff; }
+    color: @theme_selected_fg_color;
+    caret-color: @theme_selected_fg_color; }
 
 .primary-toolbar spinbutton:not(.vertical) button, headerbar spinbutton:not(.vertical) button, .primary-toolbar spinbutton:not(.vertical) button:disabled, headerbar spinbutton:not(.vertical) button:disabled {
-    color: rgba(207, 218, 231, 0.8);
-    outline-color: rgba(207, 218, 231, 0.1);
-    border-color: rgba(21, 23, 28, 0.37);
-    background-color: rgba(95, 105, 127, 0.37); }
+
+}
 
 .primary-toolbar spinbutton:not(.vertical) button:hover, headerbar spinbutton:not(.vertical) button:hover {
-    background-color: rgba(134, 144, 165, 0.37); }
+
+}
 
 .primary-toolbar spinbutton:not(.vertical) button:active, headerbar spinbutton:not(.vertical) button:active, .primary-toolbar spinbutton:not(.vertical) button:checked, headerbar spinbutton:not(.vertical) button:checked {
-    color: #ffffff;
-    outline-color: rgba(255, 255, 255, 0.3);
-    border-color: transparent;
-    background-color: @theme_selected_bg_color; }
+
+}
 
 .primary-toolbar spinbutton:not(.vertical) button:disabled, headerbar spinbutton:not(.vertical) button:disabled {
-    color: rgba(207, 218, 231, 0.4); }
+
+}
 
 .primary-toolbar spinbutton:not(.vertical) > button + button, headerbar spinbutton:not(.vertical) > button + button {
-    border-left-style: none; }
+    border-left-style: none; 
+}
 
 .primary-toolbar spinbutton:not(.vertical) > button:hover:not(:active), headerbar spinbutton:not(.vertical) > button:hover:not(:active), .primary-toolbar spinbutton:not(.vertical) > button:hover + button, headerbar spinbutton:not(.vertical) > button:hover + button {
-    box-shadow: inset 1px 0 rgba(21, 23, 28, 0.37); }
+    box-shadow: inset 2px 0 #000000;
+}
 
 .primary-toolbar spinbutton:not(.vertical) > button:first-child:hover:not(:active), headerbar spinbutton:not(.vertical) > button:first-child:hover:not(:active), .primary-toolbar spinbutton:not(.vertical) > entry + button:not(:active):hover, headerbar spinbutton:not(.vertical) > entry + button:not(:active):hover {
-    box-shadow: none; }
+    box-shadow: none; 
+}
 
 .primary-toolbar spinbutton:not(.vertical) > entry:focus + button, headerbar spinbutton:not(.vertical) > entry:focus + button {
-    border-left-color: rgba(21, 23, 28, 0.37); }
+
+}
 
 .primary-toolbar combobox:disabled, headerbar combobox:disabled {
-    color: rgba(207, 218, 231, 0.2); }
+    color: gray; 
+
+}
 
 .primary-toolbar combobox > .linked > button.combo, headerbar combobox > .linked > button.combo {
-    color: rgba(207, 218, 231, 0.8);
+    color: @theme_selected_fg_color;
     border-color: rgba(21, 23, 28, 0.37);
     background-image: linear-gradient(to bottom, rgba(95, 105, 127, 0.37));
-    background-color: transparent; }
+    background-color: transparent; 
+}
 .primary-toolbar combobox > .linked > button.combo image, headerbar combobox > .linked > button.combo image, .primary-toolbar combobox > .linked > button.combo image:hover, headerbar combobox > .linked > button.combo image:hover {
-    color: inherit; }
+    color: inherit; 
+}
 .primary-toolbar combobox > .linked > button.combo:hover, headerbar combobox > .linked > button.combo:hover {
     color: #ffffff;
     border-color: transparent;
     background-image: linear-gradient(to bottom, @theme_selected_bg_color);
     box-shadow: none; }
 .primary-toolbar combobox > .linked > button.combo:disabled, headerbar combobox > .linked > button.combo:disabled {
-    color: rgba(207, 218, 231, 0.35);
-    background-image: linear-gradient(to bottom, rgba(95, 105, 127, 0.22)); }
+
+}
 
 .primary-toolbar combobox > .linked > entry.combo:dir(ltr), headerbar combobox > .linked > entry.combo:dir(ltr) {
-    border-right-style: none; }
+    border-right-style: none; 
+
+}
 .primary-toolbar combobox > .linked > entry.combo:dir(ltr):focus, headerbar combobox > .linked > entry.combo:dir(ltr):focus {
-    box-shadow: none; }
+    box-shadow: none; 
+}
 
 .primary-toolbar combobox > .linked > entry.combo:dir(rtl), headerbar combobox > .linked > entry.combo:dir(rtl) {
     border-left-style: none; }
@@ -1371,22 +1378,25 @@ border: solid;
     opacity: 0.75; }
 
 .primary-toolbar scale slider, headerbar scale slider {
-    background-color: #454c5c;
-    border-color: rgba(21, 23, 28, 0.67); }
+   
+}
 .primary-toolbar scale slider:hover, headerbar scale slider:hover {
-    background-color: #50586b;
-    border-color: rgba(21, 23, 28, 0.67); }
+    
+}
 .primary-toolbar scale slider:active, headerbar scale slider:active {
     background-color: @theme_selected_bg_color;
-    border-color: @theme_selected_bg_color; }
+    border-color: @theme_selected_bg_color; 
+}
 .primary-toolbar scale slider:disabled, headerbar scale slider:disabled {
-    background-color: rgba(63, 69, 84, 0.991);
-    border-color: rgba(21, 23, 28, 0.67); }
+
+}
 
 .primary-toolbar scale trough, headerbar scale trough {
-    background-color: rgba(21, 23, 28, 0.37); }
+
+}
 .primary-toolbar scale trough:disabled, headerbar scale trough:disabled {
-    background-color: rgba(21, 23, 28, 0.27); }
+
+}
 
 .path-bar button.text-button, .path-bar button.image-button, .path-bar button {
     padding-left: 6px;
@@ -1418,6 +1428,7 @@ treeview.view {
     -GtkTreeView-expander-size: 16;
     border-left-color: rgba(211, 218, 227, 0.15);
     border-top-color: rgba(0, 0, 0, 0.1); }
+
 treeview.view acceleditor > label {
     background-color: @theme_selected_bg_color; }
 treeview.view:selected, treeview.view:selected:focus {
@@ -1465,42 +1476,51 @@ treeview.view.trough, treeview.view.trough:selected, treeview.view.trough:select
     background-image: linear-gradient(to bottom, #2b2e39);
     border-radius: 3px;
     border-width: 0; }
+
+
+treeview.view header{
+	padding: 1px 4px;
+    background-image: url("darkelements/column-header.png");
+	border: solid;
+    border-image: url("darkelements/column-header-border.png") 1 1 2 1 / 1px 1px 2px 1px stretch stretch;
+    border-width:1px 1px 2px 1px;
+	background-size: 100% 100%;
+	min-height: 21px;
+}
 treeview.view header button {
-    min-height: 0;
-    min-width: 0;
-    padding: 3px 6px;
-    font-weight: bold;
-    color: #b6bcc6;
-    background-color: @theme_bg_color;
-    background-image: none;
-    border-style: none solid none none;
-    border-radius: 0;
-    border-image: linear-gradient(to bottom, @theme_bg_color 20%, rgba(255, 255, 255, 0.11) 20%, rgba(255, 255, 255, 0.11) 80%, @theme_bg_color 80%) 0 1 0 0/0 1px 0 0 stretch; }
-treeview.view header button:hover {
-    color: @theme_selected_bg_color; }
-treeview.view header button:active {
-    color: #D3DAE3; }
-treeview.view header button:active, treeview.view header button:hover {
-    background-color: @theme_bg_color; }
+	padding: 1px 4px;
+	border: solid;
+    background-image: url("darkelements/column-header.png");
+    border-image: url("darkelements/column-header-border.png") 1 1 2 1 / 1px 1px 2px 1px stretch stretch;
+    border-width: 1px 1px 2px 1px;
+	background-size: 100% 100%;
+	min-height: 21px;
+}
+treeview.view header button:hover,
+treeview.view header button:active,
+treeview.view header button:hover
 treeview.view header button:active:hover {
-    color: #D3DAE3; }
+	padding: 1px 3px 1px 4px;
+	border: solid;
+    background-image: url("darkelements/button-hover.png");
+    border-image: url("darkelements/column-header-hover-border.png") 1 2 2 1 / 1px 2px 2px 1px stretch;
+    border-width: 1px 2px 2px 1px;
+	background-size: 100% 100%;
+}
+
 treeview.view header button:disabled {
-    border-color: #383C4A;
-    background-image: none; }
+
+}
 treeview.view header button:last-child {
-    border-right-style: none;
-    border-image: none; }
+
+}
 treeview.view button.dnd, treeview.view button.dnd:selected, treeview.view button.dnd:hover, treeview.view button.dnd:active,
 treeview.view header.button.dnd,
 treeview.view header.button.dnd:selected,
 treeview.view header.button.dnd:hover,
 treeview.view header.button.dnd:active {
-    padding: 0 6px;
-    transition: none;
-    color: #ffffff;
-    background-color: @theme_selected_bg_color;
-    border-radius: 0;
-    border-style: none; }
+
+}
 
 menubar,
 .menubar {
@@ -1523,7 +1543,7 @@ menubar > menuitem,
 .menubar > menuitem {
     -GtkArrow-shadow-style:none;
 	padding: 0 6px 0 6px;
-	margin-top: -1px;
+
 }
 menubar > menuitem:hover,
 .menubar > menuitem:hover {
@@ -1548,7 +1568,7 @@ menu,
     border-width: 5px 5px 5px 23px;
     color: @menu_fg_color;
 	background-size: 100% 100%; 
-
+	padding:1px;
 }
 
 menu separator,
@@ -1681,7 +1701,9 @@ menu > arrow,
     min-height: 16px;
     padding: 4px;
     background-color: #383C4A;
-    border-radius: 0; }
+    border-radius: 0; 
+	-gtk-icon-source: -gtk-icontheme("pan-right-symbolic")
+}
 menu > arrow.top,
 .menu > arrow.top {
     margin-top: -6px;
