--- a/gtk-3.20/gtk.css
+++ b/gtk-3.20/gtk.css
@@ -617,7 +617,11 @@ undershoot.right {
 
 entry {
     background-color: @theme_base_color;
-    border: 1px #3D3D3D solid;
+    border: solid;
+    border-image: url("darkelements/text-entry.png") 2 2 2 2 / 2px 2px 2px 2px stretch stretch;
+    border-width:2px;
+	background-size: 100% 100%;
+	border-color:transparent;
     /* we use inner-border instead of padding because padding
      * also applies to the progressbar.
      */
@@ -1111,7 +1115,13 @@ button.image-button.circular-button {
    border-style: solid;
    border-color: @border_color;
 }
-
+combobox entry.combo{
+	background-color: @theme_base_color;
+    border: solid;
+    border-image: url("darkelements/border-passive.png") 2 2 2 2 / 2px 2px 2px 2px stretch stretch;
+    border-width:2px;
+	background-size: 100% 100%;
+}
 combobox button.combo,
 toolbar.horizontal combobox button.combo {
     color: @theme_text_color;
@@ -1127,11 +1137,11 @@ toolbar.horizontal combobox button.combo {
 .linked.path-bar > button,
 .path-bar button image,
 .path-bar button label {
-    padding: 4px 3px;
+
 }
 
 .path-bar button {
-    border-width: 1px;
+
 }
 
 .linked.path-bar > button.toggle,
@@ -1139,7 +1149,12 @@ toolbar.horizontal combobox button.combo {
 .linked.path-bar > button.image-button,
 .linked.path-bar > button.toggle.image-button,
 .linked.path-bar > button.toggle.text-button {
-    border-width: 1px 1px 1px 0px;
+	border: solid;
+    background-image: url("darkelements/button-normal.png");
+    border-image: url("darkelements/button-normal-border.png") 2 2 2 2 / 2px 2px 2px 2px  stretch stretch;
+    border-width: 2px 2px 2px 2px;
+	background-size: 100% 100%;
+	background-color: transparent;
 }
 
 .linked.path-bar > button.toggle:first-child,
@@ -1147,7 +1162,13 @@ toolbar.horizontal combobox button.combo {
 .linked.path-bar > button.toggle.image-button:first-child,
 .linked.path-bar > button.toggle.text-button:first-child,
 .linked.path-bar > button.slider-button:first-child {
-    border-width: 1px;
+	border: solid;
+    background-image: url("darkelements/button-normal.png");
+    border-image: url("darkelements/button-normal-border.png") 2 2 2 2 / 2px 2px 2px 2px  stretch stretch;
+    border-width: 2px 2px 2px 2px;
+	background-size: 100% 100%;
+	background-color: transparent;
+	
 }
 
 .linked.path-bar > button.toggle:last-child,
@@ -1155,12 +1176,17 @@ toolbar.horizontal combobox button.combo {
 .linked.path-bar > button.toggle.image-button:last-child,
 .linked.path-bar > button.toggle.text-button:last-child,
 .linked.path-bar > button.slider-button:last-child {
-    border-width: 1px 1px 1px 0px;
+border: solid;
+    background-image: url("darkelements/button-normal.png");
+    border-image: url("darkelements/button-normal-border.png") 2 2 2 2 / 2px 2px 2px 2px  stretch stretch;
+    border-width: 2px 2px 2px 2px;
+	background-size: 100% 100%;
+	background-color: transparent;;
 }
 
 .linked.raised button:first-child,
 .linked.raised button:first-child:hover:active {
-    border-right-width: 0px;
+
 }
 
 button {
@@ -1215,13 +1241,14 @@ button:checked:disabled {
 }
 
 button separator {
-    color: shade(@internal_element_color, 1.30);
+    /*color: shade(@internal_element_color, 1.30);*/
 }
 
 /* linked buttons and entries */
 
 /* Middle button */
-.linked entry,
+.linked entry{
+}
 .linked button,
 .linked button:hover,
 .linked button:focus,
@@ -1231,19 +1258,17 @@ button separator {
 .linked button:checked:hover,
 .linked button:checked:hover:active,
 .linked button:disabled {
-    border-image: none;
-    border-radius: 0;
-    border-color: @border_color;
-    border-width: 1px;
-    padding: 4px 3px;
+
 }
 
 .linked entry {
     padding: 4px;
 }
 
-/* Leftmost button 
-.linked entry:first-child,
+/* Leftmost button */
+.linked entry:first-child{
+
+}
 .linked button:first-child,
 .linked button:hover:first-child,
 .linked button:focus:first-child,
@@ -1253,18 +1278,14 @@ button separator {
 .linked button:checked:hover:first-child,
 .linked button:checked:hover:active:first-child,
 .linked button:disabled:first-child {
-    border-image: none;
-    border-radius: 3px 0 0 3px;
-    border-color: @border_color;
-    border-width: 1px 0px 1px 1px;
-    padding: 4px 3px;
+;
 }
 
 .linked entry:first-child {
     padding: 4px;
     border-width: 1px;
 }
-/*
+
 /* Rightmost button 
 .linked entry:last-child,
 .linked button:last-child,
@@ -1557,7 +1578,9 @@ toolbar.inline-toolbar button:hover:active {
     background-image: url("darkelements/button-hover.png");
     border-image: url("darkelements/button-hover-border.png") 2 2 2 2 / 2px 2px 2px 2px stretch stretch;
     border-width:2px;
-	background-size: 100% 100%;parent;
+	background-size: 100% 100%;
+	color: @theme_text_color;
+	background-color: transparent;
 }
 
 trough,
@@ -1598,23 +1621,14 @@ colorchooser #add-color-button:hover {
 button:disabled,
 combobox button.combo:disabled,
 toolbar combobox button.combo:disabled {
-    background-image: none;
-    background-color: transparent;
-    color: @insensitive_fg_color;
+	color: @insensitive_fg_color;
 }
 
 /* Pushed + disabled button background */
 button:checked:disabled,
 toolbar button:checked:disabled,
 toolbar combobox button.combo:checked:disabled {
-    background-image: linear-gradient(to bottom,
-                      @button_active_insensitive_gradient_a,
-                      @button_active_insensitive_gradient_b 3px,
-                      @button_active_insensitive_gradient_c 4px,
-                      @button_active_insensitive_gradient_d 50%,
-                      @button_active_insensitive_gradient_e 50%,
-                      @button_active_insensitive_gradient_f);
-    background-color: transparent;
+    
 }
 
 /* Focused primary toolbar button background */
@@ -2062,14 +2076,10 @@ combobox arrow {
     min-width: 16px;
 }
 
-combobox entry.combo,
-combobox button.combo {
-    color: @internal_element_color;
-}
 
 combobox entry.combo:disabled,
 combobox button.combo:disabled {
-    color: @insensitive_fg_color;
+   
 }
 
 combobox separator {
